--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -11,10 +11,15 @@
 
 <body>
     <template id="myApp-template">
-        <div class="myApp-container">
-            <h1>Hi!</h1>
-            <div class="input">
-                <input type="text" placeholder="Let's start..." />
+        <div class="container is-fluid  myApp-container">
+            <div class="notification">
+                <h1>Your New App, at your service!</h1>
+                <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3>
+                <span class="result" title="Look at me go!" v-bind:class="{'is-success': result > 4, 'is-danger': result< -4 }">{{result}}</span>
+                <div class="btn-group">
+                    <button @click="increment" class="button is-success">Increment!</button>
+                    <button @click="decrement" class="button is-danger">Decrement!</button>
+                </div>
             </div>
         </div>
     </template>
