ADD: es6 modules, INT: folder structure change

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -8,7 +8,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-.myApp-container {
+.welcomeApp-container {
 	.flex-center();
 	flex-flow:column nowrap;
 
