--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <template id="myApp-template">
-        <div class="container is-fluid  myApp-container">
+    <template id="welcomeApp">
+        <div class="container is-fluid  welcomeApp-container">
             <div class="notification">
                 <h1>Your New App, at your service!</h1>
                 <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3>
@@ -24,7 +24,7 @@
         </div>
     </template>
     <div id="app">
-        <my-app></my-app>
+        <welcome-app></welcome-app>
     </div>
     <script src="http://localhost:35729/livereload.js"></script>
 </body>
