INT: webpack 2 && fixes && deps update

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -12,7 +12,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
-.welcomeApp-container {
+.myApp-container {
 	.flex-center();
 	flex-flow:column nowrap;
 
