--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <template id="welcomeApp">
-        <div class="container is-fluid  welcomeApp-container">
+    <template id="myApp">
+        <div class="container is-fluid  myApp-container">
             <div class="notification" v-bind:class="{'all-is-well': result > 4, 'not-so-good': result< -4 }">
                 <h1>Your New App, at your service!</h1>
                 <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3>
