--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -2,18 +2,17 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>Vue App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet"> 
 </head>
 
 <body>
     <template id="myApp">
-        <div class="container is-fluid  myApp-container">
-            <div class="notification" v-bind:class="{'all-is-well': result > 4, 'not-so-good': result< -4 }">
+        <div class="container is-fluid  myApp-container" v-bind:class="{'all-is-well': result > 4, 'not-so-good': result< -4 }">
+            <div class="bg-decor">{{result}}</div>
+            <div class="notification">
                 <h1>Your Vue App, at your service!</h1>
-                <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3>
-                <span class="result" title="Look at me go!">{{result}}</span>
+                <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3> <span class="result" title="Look at me go!">{{result}}</span>
                 <my-component></my-component>
                 <div class="btn-group">
                     <button @click="increment" class="button is-success">Increment!</button>
