INT: deps update, js fixes, airbnb eslint

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Vue App</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
 
 <body>
@@ -12,7 +12,8 @@
             <div class="bg-decor">{{result}}</div>
             <div class="notification">
                 <h1>Your Vue App, at your service!</h1>
-                <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3> <span class="result" title="Look at me go!">{{result}}</span>
+                <h3>Recomended use with <a href="https://github.com/vuejs/vue-devtools">Vue DevTools</a>.</h3> <span class="result"
+                    title="Look at me go!">{{result}}</span>
                 <my-component></my-component>
                 <div class="btn-group">
                     <button @click="increment" class="button is-success">Increment!</button>
